--- a/lab2_session/Makefile
+++ b/lab2_session/Makefile
@@ -3,5 +3,8 @@ all: measure
 popul: popul.c
 	gcc -o popul popul.c
 
-pi: pi.c
-	gcc -O0 -o pi pi.c
+pi-O%: pi.c
+	gcc -O$* -o pi-O$* pi.c
+
+pi-pg-O%: pi.c
+	gcc -O$* -pg -g -o pi-pg-O$* pi.c
